--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
   <title>Prashant Kurlekar</title>
+  <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+  <style>
+    body{
+      font-family: 'Poiret One', cursive;
+    }
+  </style>
 <body>
 <h1>Prashant Kurlekar</h1>
 <p>I'm hosted with GitHub Pages.</p>
