--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <title>Prashant Kurlekar</title>
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
     body{
-      font-family: 'Poiret One', cursive;
+      font-family: 'Open Sans', sans-serif, 'Poiret One', cursive;
     }
   </style>
 <body>
