--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <style>
-    body{
-      font-family: 'Open Sans', sans-serif, 'Poiret One', cursive;
+    body {
+      font-family: 'Open Sans', sans-serif;
+      /*font-family:  'Poiret One', cursive;*/
     }
   </style>
 <body>
 <h1>Prashant Kurlekar</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p><a href="tel:0466 098 915">+61 0466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
+<p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
 </body>
 </html>
