phone number changed

--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
-      /*font-family:  'Poiret One', cursive;*/
     }
   </style>
 <body>
 <h1>Prashant Kurlekar</h1>
-<p><a href="tel:0466 098 915">+61 0466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
+<p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
 <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
 </body>
 </html>
