--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
 
 <body>
   <div class="container">
-    <h1>Prashant Kurlekar</h1>
+    <h3>Prashant Kurlekar</h3>
     <p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
     <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
+    <p>Full Stack Developer</p>
+    <p>.NET Core, C#, SQL Server, Azure, TypeScript, Angular2, Ionic2</p>
+    <p>CSS, SASS, Bootstrap, WebAPI, Entity Framework, </p>
+    <p>ASP.NET Web Forms, WCF, LINQ, jQuery</p>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
