--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<script>
+<!--<script>
   window.location.replace("https://prashantkurlekar.github.io/dist/");
-</script>
-<!--<!DOCTYPE html>
+</script>-->
+<!DOCTYPE html>
 <html>
 <title>Prashant Kurlekar</title>
 <meta charset="utf-8">
@@ -45,4 +45,4 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
 </body>
-</html>-->
+</html>
