--- a/index.html
+++ b/index.html
@@ -1,49 +1,51 @@
-<!--<script>
-  window.location.replace("https://prashantkurlekar.github.io/dist/");
-</script>-->
-<!DOCTYPE html>
 <html>
-<title>Prashant Kurlekar</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta http-equiv="x-ua-compatible" content="ie=edge">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
-<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<style>
-  body {
-    font-family: 'Open Sans', sans-serif;
-  }
-</style>
+  <title>Prashant Kurlekar</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+    crossorigin="anonymous">
 
-<body>
-  <div class="container">
-    <br>
-    <h3>Prashant Kurlekar</h3>
-    <p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
-    <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
-    <p>Full Stack Developer</p>
-    <p>.NET Core, C#, SQL Server, Azure, TypeScript, Angular2, Ionic2</p>
-    <p>CSS, SASS, Bootstrap, WebAPI, Entity Framework, </p>
-    <p>ASP.NET Web Forms, WCF, LINQ, jQuery</p>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+    }
+  </style>
+
+  <body>
     <div class="container">
-      <p>Apps Published
-        <ul>
-          <li>
-            NSW DKT
-            <ul>
-              <li>
-                <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
-              </li>
-              <li>
-                <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
-              </li>    
-            </ul>
-        </ul>
-      </p>
+      <br>
+      <h3>Prashant Kurlekar</h3>
+      <p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
+      <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
+      <p>Full Stack Developer</p>
+      <p>ionic, angular, .NET Core, C#, SQL Server, Azure, TypeScript</p>
+      <p>CSS, SASS, Bootstrap, .NET WebAPI, Entity Framework, </p>
+      <p>ASP.NET Web Forms, WCF, LINQ, jQuery</p>
+      <div class="container">
+        <p>Apps Published
+          <ul>
+            <li>
+              NSW DKT
+              <ul>
+                <li>
+                  <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
+                </li>
+                <li>
+                  <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
+                </li>
+              </ul>
+          </ul>
+        </p>
+      </div>
     </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
-</body>
+  </body>
+
 </html>
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+  crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+  crossorigin="anonymous"></script>
