--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
       <p>Full Stack Developer</p>
       <p>ionic, angular, .NET Core, C#, SQL Server, Azure, TypeScript, JavaScript</p>
-      <p>CSS, SASS, Bootstrap, ASP.NET, .NET WebAPI, Entity Framework, WCF, LINQ</p>
+      <p>SASS, CSS, Bootstrap, ASP.NET, .NET WebAPI, Entity Framework, WCF, LINQ</p>
       <p></p>
       <div class="container">
         <p>Apps Published
