--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
       <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
       <p>Full Stack Developer</p>
-      <p>ionic, angular, .NET Core, C#, SQL Server, Azure, TypeScript, JavaScript</p>
-      <p>SASS, CSS, Bootstrap, ASP.NET, .NET WebAPI, Entity Framework, WCF, LINQ</p>
+      <p>ionic, angular, .NET, C#, ASP.NET, SQL Server, Azure, TypeScript, JavaScript</p>
+      <p>SASS, CSS, Bootstrap, ASP.NET WebAPI, Entity Framework, WCF, LINQ</p>
       <p></p>
       <div class="container">
         <p>Apps Published
