--- a/index.html
+++ b/index.html
@@ -16,29 +16,51 @@
   <body>
     <div class="container">
       <br>
-      <h3>Prashant Kurlekar</h3>
-      <p><a href="tel:+61 466 098 915">+61 466 098 915</a> | <a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a></p>
-      <p>@<a href="https://twitter.com/prashant5582">prashant5582</a></p>
-      <p>Full Stack Developer</p>
+      <h2>Prashant Kurlekar</h2>
+      <p><a href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a> | @<a href="https://twitter.com/prashant5582"
+          target="_blank">prashant5582</a> | <a href="tel:+61466098915">+61 466 098 915</a> </p>
+      <!-- <p>@<a href="https://twitter.com/prashant5582" target="_blank">prashant5582</a></p> -->
+      <h5>Full Stack Developer</h5>
       <p>ionic, angular, .NET, C#, ASP.NET, SQL Server, Azure, TypeScript, JavaScript</p>
       <p>SASS, CSS, Bootstrap, ASP.NET WebAPI, Entity Framework, WCF, LINQ</p>
-      <p></p>
-      <div class="container">
-        <p>Apps Published
-          <ul>
-            <li>
-              NSW DKT
-              <ul>
-                <li>
-                  <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
-                </li>
-                <li>
-                  <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
-                </li>
-              </ul>
-          </ul>
-        </p>
-      </div>
+    </div>
+    <div class="container">
+      <h4>Apps published</h4>
+      <ul>
+        <li>
+          NSW DKT
+          <!-- <ul>
+              <li>
+                <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
+              </li>
+              <li>
+                <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
+              </li>
+            </ul> -->
+        </li>
+        <li>
+          CBHS Health
+          <!-- <ul>
+              <li>
+                <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
+              </li>
+              <li>
+                <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
+              </li>
+            </ul> -->
+        </li>
+        <li>
+          CBHS Corp
+          <!-- <ul>
+              <li>
+                <a href="https://itunes.apple.com/us/app/nsw-dkt/id1106413436">Apple App Store</a>
+              </li>
+              <li>
+                <a href="https://play.google.com/store/apps/details?id=com.prashantkurlekar.nswdkt">Google Play Store</a>
+              </li>
+            </ul> -->
+        </li>
+      </ul>
     </div>
   </body>
 
