--- a/index.html
+++ b/index.html
@@ -72,5 +72,5 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
   crossorigin="anonymous"></script>
 <script>
-  window.location.replace('dist/index.html');
+  window.location.replace('new-pk/dist/index.html');
 </script>
