--- a/new-pk/src/index.html
+++ b/new-pk/src/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>NewPk</title>
+    <title>Prashant Kurlekar</title>
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
