temp commented sections tobe updated

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       .img-circle {
         max-width: 256px;
         max-height: 256px;
-        border-radius: 5%;
+        border-radius: 10%;
       }
     </style>
 
@@ -63,7 +63,7 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/meditation-00.jpg" alt="">
+        <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/profile-00.png" alt="">
         <h1 class="text-uppercase mb-0">Prashant Kurlekar</h1>
         <hr class="star-light">
         <h3 class="font-weight-light mb-0">Full Stack(.NET) - Web Developer in Sydney, Australia</h3>
@@ -71,7 +71,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
         <hr class="star-dark mb-5">
@@ -138,10 +138,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- About Section -->
-    <section class="bg-primary text-white mb-0" id="about">
+    <!-- <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
         <h2 class="text-center text-uppercase text-white">About</h2>
         <hr class="star-light mb-5">
@@ -160,17 +160,15 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
-    <section id="contact">
+    <!-- <section id="contact">
       <div class="container">
         <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
         <hr class="star-dark mb-5">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
-            <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
             <form name="sentMessage" id="contactForm" novalidate="novalidate">
               <div class="control-group">
                 <div class="form-group floating-label-form-group controls mb-0 pb-2">
@@ -209,10 +207,10 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
-    <footer class="footer text-center">
+    <!-- <footer class="footer text-center">
       <div class="container">
         <div class="row">
           <div class="col-md-4 mb-5 mb-lg-0">
@@ -257,7 +255,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
@@ -275,7 +273,7 @@
     <!-- Portfolio Modals -->
 
     <!-- Portfolio Modal 1 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-1">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -296,10 +294,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 2 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-2">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -320,10 +318,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 3 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-3">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -344,10 +342,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 4 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-4">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -368,10 +366,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 5 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-5">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -392,10 +390,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Portfolio Modal 6 -->
-    <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
+    <!-- <div class="portfolio-modal mfp-hide" id="portfolio-modal-6">
       <div class="portfolio-modal-dialog bg-white">
         <a class="close-button d-none d-md-block portfolio-modal-dismiss" href="#">
           <i class="fa fa-3x fa-times"></i>
@@ -416,7 +414,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
