--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#aboutme">About Me</a>
             </li>
+
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">Projects</a>
             </li>
+
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a>
             </li>
@@ -60,22 +62,33 @@
       </div>
     </nav>
 
-    <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
+    <header class="masthead bg-freelancer-header text-white text-center">
       <div class="container">
         <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/profile-00.png" alt="">
-        <h1 class="text-uppercase mb-0">Prashant Kurlekar</h1>
-        <hr class="star-light">
-        <h3 class="font-weight-light mb-0">Full Stack(.NET) - Web Developer in Sydney, Australia</h3>
+        <h3 class="text-uppercase mb-0">Prashant Kurlekar</h3>
+        <hr class="name">
+        <h4 class="font-weight-light mb-0">Full Stack(.NET) - Web Developer in Sydney, Australia</h4>
       </div>
     </header>
 
-    <!-- Portfolio Grid Section -->
-    <!-- <section class="portfolio" id="portfolio">
+    <section class="bg-primary text-white mb-0" id="aboutme">
       <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-        <hr class="star-dark mb-5">
+        <h4 class="text-center text-uppercase text-white">About Me</h4>
+        <hr>
         <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <p class="lead">I have 15+ years of experience as software developer and have worked at both large software consulting and for small startups. While I'm a proficient Full Stack(.NET) developer my experties are building mobile applications and mobile
+              first websites.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="portfolio" id="projects">
+      <div class="container">
+        <h4 class="text-center text-uppercase text-secondary mb-0">Projects</h4>
+        <hr class="star-dark mb-5">
+        <!-- <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
               <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
@@ -136,38 +149,20 @@
               <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
             </a>
           </div>
-        </div>
+        </div> -->
       </div>
-    </section> -->
+    </section>
 
-    <!-- About Section -->
-    <!-- <section class="bg-primary text-white mb-0" id="about">
+    <section class="bg-primary text-white mb-0" id="contact">
       <div class="container">
-        <h2 class="text-center text-uppercase text-white">About</h2>
-        <hr class="star-light mb-5">
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
-          </div>
-        </div>
-        <div class="text-center mt-4">
-          <a class="btn btn-xl btn-outline-light" href="#">
-            <i class="fa fa-download mr-2"></i>
-            Download Now!
-          </a>
-        </div>
-      </div>
-    </section> -->
-
-    <!-- Contact Section -->
-    <!-- <section id="contact">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+        <h4 class="text-center text-uppercase text-white mb-0">Contact Me</h4>
         <hr class="star-dark mb-5">
         <div class="row">
+          <div class="col text-center">
+            <a class="text-white text-center" href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
+          </div>
+        </div>
+        <!-- <div class="row">
           <div class="col-lg-8 mx-auto">
             <form name="sentMessage" id="contactForm" novalidate="novalidate">
               <div class="control-group">
@@ -205,61 +200,44 @@
               </div>
             </form>
           </div>
-        </div>
+        </div> -->
       </div>
-    </section> -->
+    </section>
 
-    <!-- Footer -->
-    <!-- <footer class="footer text-center">
+    <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Location</h4>
-            <p class="lead mb-0">2215 John Daniel Drive
-              <br>Clark, MO 65243</p>
+            <p class="lead mb-0">Sydney, Australia</p>
           </div>
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Around the Web</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-google-plus"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://twitter.com/prashankurlekar/">
                   <i class="fa fa-fw fa-twitter"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/prashant5582/">
                   <i class="fa fa-fw fa-linkedin"></i>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="#">
-                  <i class="fa fa-fw fa-dribbble"></i>
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/prashantkurlekar">
+                  <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-          </div>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Prashat Kurlekar 2018</small>
+        <small>&copy; Prashat Kurlekar 2018</small>
       </div>
     </div>
 
