added apis description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="row">
           <div class="col-lg-12 ml-auto">
             <p class="lead">I have 15+ years of experience as software developer and have worked at both large software consulting and for small startups. While I'm a proficient Full Stack(.NET) developer my experties are building mobile applications and mobile
-              first websites.</p>
+              first websites, with scalable backend APIs.</p>
           </div>
         </div>
       </div>
