--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
           <div class="col-lg-12 ml-auto">
             <p class="lead">I have 15+ years of experience as software developer and have worked at both large software consulting and for small startups. While I'm a proficient Full Stack(.NET) developer my experties are building mobile applications and mobile
               first websites, with scalable backend APIs.</p>
+            <p class="lead">
+              I like building mobile apps.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h3 class="text-center text-uppercase text-white">Skills</h3>
+            <hr class="name">
+            <p class="text-center lead">
+              .NET Core, SQL Server, C#, JavaScript, TypeScript,
+            </p>
+            <p class="text-center lead">
+              <a class="text-white text-center" href="https://ionicframework.com/">ionic</a>,
+              <a class="text-white text-center" href="https://angular.io/">angular</a>, react,
+              <a class="text-white text-center" href="https://getbootstrap.com/">Bootstrap</a>
+            </p>
+            <p class="text-center lead">
+              Microsoft Azure, Identity Server
+            </p>
           </div>
         </div>
       </div>
@@ -86,8 +106,80 @@
 
     <section class="portfolio" id="projects">
       <div class="container">
-        <h4 class="text-center text-uppercase text-secondary mb-0">Projects</h4>
+        <h4 class="text-center text-uppercase text-secondary mb-0">Work Experience</h4>
         <hr class="star-dark mb-5">
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2016 - CBHS Health Fund Limited</h5>
+            <h6>Web Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2015 - 2016 EFFISION</h5>
+            <h6>Solutions Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2014 - Janison</h5>
+            <h6>Software Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2014 - Citius Tech</h5>
+            <h6>Solutions Architect</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2008 - 2014 Capgemini</h5>
+            <h6>Manager, Technical Lead, Sr. Consultant</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2005 - 2008 Three</h5>
+            <h6>Project Lead, Sr. Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2004 - 2005 AurionPro</h5>
+            <h6>Software Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 ml-auto">
+            <h5>2003 - 2004 - Orient</h5>
+            <h6>Trainee Software Developer</h6>
+            <p>
+              Working on mobile app.
+            </p>
+          </div>
+        </div>
         <!-- <div class="row">
           <div class="col-md-6 col-lg-4">
             <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
@@ -150,6 +242,13 @@
             </a>
           </div>
         </div> -->
+      </div>
+      <div class="container">
+        <h4 class="text-center text-uppercase text-secondary mb-0">Side projects</h4>
+        <hr class="star-dark mb-5">
+        <div class="row">
+          NSW RTA
+        </div>
       </div>
     </section>
 
