--- a/index.html
+++ b/index.html
@@ -16,21 +16,12 @@
     <!-- Custom fonts for this template -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <!-- Plugin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
     <!-- Custom styles for this template -->
     <link href="css/freelancer.min.css" rel="stylesheet">
-
-    <style>
-      .img-circle {
-        max-width: 256px;
-        max-height: 256px;
-        border-radius: 10%;
-      }
-    </style>
 
   </head>
 
@@ -80,16 +71,16 @@
             <p class="lead">I have 15+ years of experience as software developer and have worked at both large software consulting and for small startups. While I'm a proficient Full Stack(.NET) developer my experties are building mobile applications and mobile
               first websites, with scalable backend APIs.</p>
             <p class="lead">
-              I like building mobile apps.
+              <!-- I like building mobile apps. -->
             </p>
           </div>
         </div>
+        <h5 class="text-center text-uppercase text-white">Skills</h5>
+        <hr class="skills">
         <div class="row">
           <div class="col-lg-12 ml-auto">
-            <h3 class="text-center text-uppercase text-white">Skills</h3>
-            <hr class="name">
             <p class="text-center lead">
-              .NET Core, SQL Server, C#, JavaScript, TypeScript,
+              .NET Core, SQL Server, C#, JavaScript, TypeScript
             </p>
             <p class="text-center lead">
               <a class="text-white text-center" href="https://ionicframework.com/">ionic</a>,
@@ -97,7 +88,7 @@
               <a class="text-white text-center" href="https://getbootstrap.com/">Bootstrap</a>
             </p>
             <p class="text-center lead">
-              Microsoft Azure, Identity Server
+              Microsoft Azure, Identity Server, Entity Framework
             </p>
           </div>
         </div>
@@ -108,7 +99,7 @@
       <div class="container">
         <h4 class="text-center text-uppercase text-secondary mb-0">Work Experience</h4>
         <hr class="star-dark mb-5">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col-lg-12 ml-auto">
             <h5>2016 - CBHS Health Fund Limited</h5>
             <h6>Web Developer</h6>
@@ -116,6 +107,14 @@
 
             </p>
           </div>
+        </div> -->
+        <div class="jumbotron">
+          <!-- <h5 class="display-4">CBHS Health Fund Limited</h5> -->
+          <h5>2016 - CBHS Health Fund Limited</h5>
+          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+          <hr class="my-4">
+          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
         <div class="row">
           <div class="col-lg-12 ml-auto">
@@ -137,7 +136,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 ml-auto">
-            <h5>2014 - Citius Tech</h5>
+            <h5>2014 - CitiusTech</h5>
             <h6>Solutions Architect</h6>
             <p>
 
@@ -164,7 +163,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12 ml-auto">
-            <h5>2004 - 2005 AurionPro</h5>
+            <h5>2004 - 2005 aurionpro</h5>
             <h6>Software Developer</h6>
             <p>
 
