--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="container">
         <h4 class="text-center text-uppercase text-secondary mb-0">Work Experience</h4>
         <hr class="star-dark mb-5">
-        <!-- <div class="row">
+        <div class="row">
           <div class="col-lg-12 ml-auto">
             <h5>2016 - CBHS Health Fund Limited</h5>
             <h6>Web Developer</h6>
@@ -107,14 +107,6 @@
 
             </p>
           </div>
-        </div> -->
-        <div class="jumbotron">
-          <!-- <h5 class="display-4">CBHS Health Fund Limited</h5> -->
-          <h5>2016 - CBHS Health Fund Limited</h5>
-          <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-          <hr class="my-4">
-          <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
         <div class="row">
           <div class="col-lg-12 ml-auto">
