--- a/index.html
+++ b/index.html
@@ -309,6 +309,16 @@
         </div>
       </div> -->
 
+      <div class="container">
+        <div class="row">
+          <div class="col text-center">
+            <h3>
+              <a href="https://www.icloud.com/#iclouddrive/0pnIuODfHVieIEGdTWmXw22MA" target="_blank">Download Resume</a>
+            </h3>
+          </div>
+        </div>
+      </div>
+
     </section>
 
     <section class="bg-primary text-white mb-0" id="contact">
