--- a/index.html
+++ b/index.html
@@ -347,11 +347,14 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Coordinates</h4>
+            <h4 class="mb-6">
+              <i class="fa fa-map-signs"></i>
+              Coordinates
+            </h4>
             <p class="lead mb-0">Sydney, Australia</p>
           </div>
           <div class="col-md-6 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">What else</h4>
+            <h4 class="mb-6">What else</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
                 <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://twitter.com/prashankurlekar/">
