added url to organization names

--- a/index.html
+++ b/index.html
@@ -126,10 +126,14 @@
             <div class="col-lg-12 ml-auto">
               <ul>
                 <li>
-                  Building mobile apps "CBHS Health" and "CBHS Corp". Includes architecting backend APIs and Authentication framework(using Identity Server).
+                  Building mobile apps
+                  <a href="https://www.cbhs.com.au/member-centre/member-information/cbhs-mobile-app" target="_blank">CBHS Health</a> and
+                  <a href="https://www.cbhscorporatehealth.com.au/information/member-information/cbhs-corporate-health-mobile-app" target="_blank">CBHS Corp</a>. Includes architecting backend APIs and Authentication framework(using Identity Server).
                 </li>
                 <li>
-                  Maintaining CBHS Health Fund and CBHS Corporate websites.
+                  Maintaining
+                  <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a> and
+                  <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> websites build on .NET and Sitefinity.
                 </li>
                 <li>
                   Training developers on ionic, angular, .NET Core and Clean Code principles
@@ -142,7 +146,11 @@
         <div class="jumbotron-important">
           <div class="row">
             <div class="col">
-              <h5>EFFISION</h5>
+              <h5>
+                <a href="http://effision.com/" target="_blank">
+                  EFFISION
+                </a>
+              </h5>
             </div>
           </div>
           <div class="row">
@@ -160,7 +168,7 @@
                   Worked on developing and maintaining insurance underwriting portal, build on ASP.NET
                 </li>
                 <li>
-                  Built POS (Point of Sale) and media distribution mobile app using AngularJS and ionic
+                  Built POSFLO a Point of Sale and media distribution mobile app using AngularJS and ionic
                 </li>
               </ul>
             </div>
@@ -170,7 +178,11 @@
         <div class="jumbotron-not-important">
           <div class="row">
             <div class="col">
-              <h5>Janison</h5>
+              <h5>
+                <a href="https://janison.com/" target="_blank">
+                  Janison
+                </a>
+              </h5>
             </div>
           </div>
           <div class="row">
@@ -192,7 +204,11 @@
 
           <div class="row">
             <div class="col">
-              <h5>CitiusTech</h5>
+              <h5>
+                <a href="https://www.citiustech.com/" target="_blank">
+                  CitiusTech
+                </a>
+              </h5>
             </div>
           </div>
           <div class="row">
@@ -208,7 +224,11 @@
         <div class="jumbotron-important">
           <div class="row">
             <div class="col">
-              <h5>Capgemini</h5>
+              <h5>
+                <a href="https://www.capgemini.com/">
+                  Capgemini
+                </a>
+              </h5>
             </div>
           </div>
           <div class="row">
@@ -234,12 +254,21 @@
               </ul>
             </div>
           </div>
+          <div class="row">
+            <div class="col-lg-12 ml-auto">
+              Couple of assignment is Switzerland and France.
+            </div>
+          </div>
         </div>
 
         <div class="jumbotron-important">
           <div class="row">
             <div class="col">
-              <h5>3 Global Services (Tech Mahindra)</h5>
+              <h5>3 Global Services (now
+                <a href="http://www.techmbs.in/">
+                  Tech Mahindra Business Services
+                </a>)
+              </h5>
             </div>
           </div>
           <div class="row">
@@ -271,7 +300,11 @@
 
           <div class="row">
             <div class="col">
-              <h5>aurionpro</h5>
+              <h5>
+                <a href="https://www.aurionpro.com/">
+                  aurionpro
+                </a>
+              </h5>
             </div>
           </div>
           <div class="row">
