--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>&copy; Prashat Kurlekar 2018</small>
+        <small>&copy; Prashant Kurlekar 2018</small>
       </div>
     </div>
 
