cbhs url updated

--- a/index.html
+++ b/index.html
@@ -111,7 +111,11 @@
       <div class="jumbotron-important">
         <div class="row">
           <div class="col">
-            <h5>CBHS Health Fund Limited</h5>
+            <h5>
+              <a href="https://www.cbhs.com.au/" target="_blank">
+                CBHS Health Fund Limited
+              </a>
+            </h5>
           </div>
         </div>
         <div class="row">
