--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <header class="masthead bg-freelancer-header text-white text-center">
     <div class="container">
-      <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/profile-00.png" alt="">
+      <img class="img-fluid mb-5 d-block mx-auto img-circle" src="img/PrashantKurlekarAvatar-2008.jpg" alt="">
       <h3 class="text-uppercase mb-0">Prashant Kurlekar</h3>
       <hr class="name">
       <h4 class="font-weight-light mb-0">Full Stack(.NET) / Web Developer</h4>
@@ -69,7 +69,7 @@
       <div class="row">
         <div class="col-lg-12 ml-auto">
           <p class="lead">
-            A Software developer with 15+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) developement, my expertise lies in building mobile applications and mobile
+            A Software developer with 18+ years of experience, I have worked at large software consulting organisations as well as small startups. Proficient in Full Stack (.NET) developement, my expertise lies in building mobile applications and mobile
             first websites with scalable backend APIs.
           </p>
           <p class="lead">
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-lg-12 ml-auto">
           <p class="text-center lead">
-            .NET Core, SQL Server, C#, JavaScript, TypeScript
+            .NET, SQL Server, C#, JavaScript, TypeScript
           </p>
           <p class="text-center lead">
             <a class="text-white text-center" href="https://ionicframework.com/">ionic</a>,
@@ -131,13 +131,13 @@
             <ul>
               <li>
                 Building mobile apps
-                <a href="https://www.cbhs.com.au/member-centre/member-information/cbhs-mobile-app" target="_blank">CBHS Health</a> and
-                <a href="https://www.cbhscorporatehealth.com.au/information/member-information/cbhs-corporate-health-mobile-app" target="_blank">CBHS Corp</a>. Includes architecting backend APIs and Authentication framework(using Identity Server).
+                <a href="https://www.cbhs.com.au/member-centre/member-information/cbhs-mobile-app" target="_blank">CBHS Health</a>,
+                <a href="https://www.cbhscorporatehealth.com.au/information/member-information/cbhs-corporate-health-mobile-app" target="_blank">CBHS Corp</a> and CBHS International. Includes architecting backend APIs and Authentication framework(using Identity Server).
               </li>
               <li>
                 Maintaining
-                <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a> and
-                <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> websites build on .NET and Sitefinity.
+                <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a>,
+                <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> and <a href="https://www.cbhsinternationalhealth.com.au/">CBHS International Health</a> websites build on .NET and Sitefinity.
               </li>
               <li>
                 Training developers on ionic, angular, .NET Core and Clean Code principles
