--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
       </div>
 
-      <div class="jumbotron-important">
+      <div class="jumbotron-not-important">
         <div class="row">
           <div class="col">
             <h5>
@@ -265,7 +265,7 @@
         </div>
       </div>
 
-      <div class="jumbotron-important">
+      <div class="jumbotron-not-important">
         <div class="row">
           <div class="col">
             <h5>3 Global Services (now
@@ -300,7 +300,7 @@
         </div>
       </div>
 
-      <div class="jumbotron-not-important">
+      <div class="jumbotron-important">
 
         <div class="row">
           <div class="col">
@@ -363,14 +363,14 @@
       <h4 class="text-center text-uppercase text-white mb-0">Contact Me</h4>
       <hr>
       <div class="row">
-        <div class="col text-center">
+        <div class="col-md-6 text-center">
           <h5>
             <i class="fa fa-envelope fa-lg"></i>
             <a class="text-white text-center" href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
           </h5>
         </div>
 
-        <div class="col text-center">
+        <div class="col-md-6 text-center">
           <h5>
             <i class="fa fa-mobile fa-lg"></i>
             <a class="text-white text-center" href="tel:+61466098915">0466 098 915</a>
