removed unused icon

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       <div class="row">
         <div class="col-md-6 text-center">
           <h5>
-            <i class="fa fa-envelope fa-lg"></i>
+            <!-- <i class="fa fa-envelope fa-lg"></i> -->
             <a class="text-white text-center" href="mailto:prashantkurlekar@gmail.com">prashantkurlekar@gmail.com</a>
           </h5>
         </div>
