work exp card looking good

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <header>
     <div class="flex flex-col items-center">
       <div class="flex flex-col items-center">
-        <img src="img/PrashantKurlekarAvatar-2008.jpg" alt="Prashant Kurlekar" class="rounded-2xl shadow-2xl">
+        <img src="img/PrashantKurlekarAvatar-2008.jpg" alt="Prashant Kurlekar" class="rounded-2xl shadow-2xl mt-4 h-48 md:h-60">
         <!-- <h3>Prashant Kurlekar</h3> -->
       </div>
       <div class="pt-4">
@@ -46,7 +46,7 @@
     </div>
   </header>
 
-  <main class="p-4 md:px-28 lg:px-48">
+  <main class="p-4 py-12">
     <section id="aboutme" class="flex flex-col">
       <h4 class="text-2xl border-b-2">About Me</h4>
 
@@ -85,44 +85,32 @@
     </section>
 
     <section id="experience" class="flex flex-col mt-4">
-      <h4 class="text-2xl border-b-2">Work Experience</h4>
+      <h4 class="text-2xl border-b-2 mb-2">Work Experience</h4>
 
       <div class="grid grid-cols-1">
-        <div>
-          <div>
-            <h5>
-              <a href="https://www.cbhs.com.au/" target="_blank">
-                CBHS Health Fund Limited
-              </a>
-            </h5>
+        <div class="bg-red-300 rounded-lg p-4">
+          <h5 class="text-xl">
+            <a href="https://www.cbhs.com.au/" target="_blank">CBHS Health Fund Limited</a>
+          </h5>
+          <div class="flex justify-between flex-col md:flex-row ">
+            <h6 class="text-lg">Web Developer</h6>
+            <h6 class="text-lg">2016 - ...</h6>
           </div>
-          <div>
-            <div>
-              <h6>Web Developer</h6>
-            </div>
-            <div>
-              <h6>2016 - ...</h6>
-            </div>
-          </div>
-          <div>
-            <div>
-              <ul>
-                <li>
-                  Building mobile apps
-                  <a href="https://www.cbhs.com.au/member-centre/member-information/cbhs-mobile-app" target="_blank">CBHS Health</a>,
-                  <a href="https://www.cbhscorporatehealth.com.au/information/member-information/cbhs-corporate-health-mobile-app" target="_blank">CBHS Corp</a> and CBHS International. Includes architecting backend APIs and Authentication framework(using Identity Server).
-                </li>
-                <li>
-                  Maintaining
-                  <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a>,
-                  <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> and <a href="https://www.cbhsinternationalhealth.com.au/">CBHS International Health</a> websites build on .NET and Sitefinity.
-                </li>
-                <li>
-                  Training developers on ionic, angular, .NET Core and Clean Code principles
-                </li>
-              </ul>
-            </div>
-          </div>
+          <ul class="flex flex-col gap-y-2">
+            <li>
+              Building mobile apps
+              <a href="https://www.cbhs.com.au/member-centre/member-information/cbhs-mobile-app" target="_blank">CBHS Health</a>,
+              <a href="https://www.cbhscorporatehealth.com.au/information/member-information/cbhs-corporate-health-mobile-app" target="_blank">CBHS Corp</a> and CBHS International. Includes architecting backend APIs and Authentication framework(using Identity Server).
+            </li>
+            <li>
+              Maintaining
+              <a href="https://www.cbhs.com.au" target="_blank">CBHS Health Fund</a>,
+              <a href="https://www.cbhscorporatehealth.com.au/">CBHS Corporate Health</a> and <a href="https://www.cbhsinternationalhealth.com.au/">CBHS International Health</a> websites build on .NET and Sitefinity.
+            </li>
+            <li>
+              Training developers on ionic, angular, .NET Core and Clean Code principles
+            </li>
+          </ul>
         </div>
 
         <div>
